@@ -6,14 +6,14 @@ third_party {
     type: GIT
     value: "https://chromium.googlesource.com/webm/libvpx"
   }
-  version: "v1.13.0"
+  version: "v1.13.1"
   license_type: NOTICE
   security {
       tag: "NVD-CPE2.3:cpe:/a:webmproject:libvpx:-"
   }
   last_upgrade_date {
     year: 2023
-    month: 2
-    day: 10
+    month: 10
+    day: 3
   }
 }
