@@ -1,5 +1,5 @@
 URL: https://chromium.googlesource.com/webm/libvpx/
-Version: v1.13.0
+Version: v1.13.1
 BugComponent: 42195
 Owners: jzern, jianj
 Local Modifications:
